--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,64 +1,52 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
+      <h2 class="text-center my-5">新規会員登録</h2>
+      <%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>名前</td>
+              <td><%= f.label :first_name, "(姓)" %> <%= f.text_field :first_name, autofocus: true, :placeholder =>"令和" %></td>
+              <td><%= f.label :last_name, "(名)" %> <%= f.text_field :last_name, :placeholder =>"太郎" %></td>
+            </tr>
+            <tr>
+              <td>フリガナ</td>
+              <td><%= f.label :first_name_kana, "(セイ)" %> <%= f.text_field :first_name_kana, autofocus: true, :placeholder =>"レイワ" %></td>
+              <td><%= f.label :last_name_kana, "(メイ)" %> <%= f.text_field :last_name_kana, :placeholder =>"タロウ" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :email, "メールアドレス" %></td>
+              <td colspan="2"><%= f.text_field :email, autofocus: true, :placeholder =>"example@example.co.jp" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :postal_code, "郵便番号(ハイフンなし)" %></td>
+              <td colspan="2"><%= f.text_field :postal_code, autofocus: true, :placeholder =>"0123456" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :address, "住所" %></td>
+              <td colspan="2"><%= f.text_field :address, autofocus: true, :placeholder =>"東京都品川区1-2" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :telephone_number, "電話番号(ハイフンなし)" %></td>
+              <td colspan="2"><%= f.text_field :telephone_number, autofocus: true, :placeholder =>"080-1234-5678" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :password, "パスワード(#{@minimum_password_length}文字以上)" %></td>
+              <td colspan="2"><%= f.password_field :password, autocomplete: "new-password" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :password_confirmation, "パスワード(確認用)" %></td>
+              <td colspan="2"><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="text-center">
+          <%= f.submit "新規登録", class: "btn btn-success" %><br>
+          <%= render "public/shared/links" %>
+        </div>
+      <% end %>
+    </div>
   </div>
-  
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :last_name_kana %><br />
-    <%= f.text_field :last_name_kana, autofocus: true %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :first_name_kana %><br />
-    <%= f.text_field :first_name_kana, autofocus: true %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :postal_code %><br />
-    <%= f.text_field :postal_code, autofocus: true %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address, autofocus: true %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :telephone_number %><br />
-    <%= f.text_field :telephone_number, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
