ジャンル、商品モデル作成

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -30,7 +30,7 @@
             </tr>
             <tr>
               <td><%= f.label :telephone_number, "電話番号(ハイフンなし)" %></td>
-              <td colspan="2"><%= f.text_field :telephone_number, autofocus: true, :placeholder =>"080-1234-5678" %></td>
+              <td colspan="2"><%= f.text_field :telephone_number, autofocus: true, :placeholder =>"08012345678" %></td>
             </tr>
             <tr>
               <td><%= f.label :password, "パスワード(#{@minimum_password_length}文字以上)" %></td>
